--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ out/
 # Gradle files
 .gradle/
 ./build/
-
+./build/translation-reports
 
 # Local configuration file (sdk path, etc)
 local.properties
