--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -29,7 +29,8 @@ ext {
     google = [
             material: 'com.google.android.material:material:1.5.0',
             gson: 'com.google.code.gson:gson:2.8.8',
-            guava: 'com.google.guava:guava:30.1.1-android'
+            guava: 'com.google.guava:guava:31.0.1-android',
+            guava_jre: 'com.google.guava:guava:31.0.1-jre'
     ]
 
     tests = [
