--- a/lsp/java/build.gradle
+++ b/lsp/java/build.gradle
@@ -15,6 +15,7 @@
  *   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
  */
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion rootProject.ext.compileSdk
@@ -37,6 +38,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+
 dependencies {
     implementation common.editor
     implementation common.utilcode
@@ -53,6 +55,18 @@ dependencies {
 
     implementation project(path: ':lsp:api')
     implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'])
+
+    implementation "androidx.core:core-ktx:1.7.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    testImplementation project(':common')
+    testImplementation 'com.google.truth:truth:1.1.3'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.robolectric:robolectric:4.7.3'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'com.google.truth:truth:1.1.3'
+    testImplementation common.utilcode
 }
 
 repositories {
