--- a/.github/workflows/android_workflow.yml
+++ b/.github/workflows/android_workflow.yml
@@ -36,10 +36,12 @@ jobs:
           configuration-cache-enabled: true
 
       - name: Generate translation report
-        run: |
-          chmod +x ./gradlew
-          ./gradlew :app:checkTranslations
-        shell: bash
+        uses: eskatos/gradle-command-action@v1
+          with:
+            arguments: :app:checkTranslations
+            distributions-cache-enabled: true
+            dependencies-cache-enabled: true
+            configuration-cache-enabled: true
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
