Set Kotlin target JVM version to 11 Format java source code before every build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,10 @@ android {
         targetCompatibility rootProject.ext.javaTargetVersion
     }
 
+    kotlinOptions {
+        jvmTarget = "11"
+    }
+
     lintOptions {
         abortOnError false
         disable "VectorPath",
