--- a/.github/workflows/android_workflow.yml
+++ b/.github/workflows/android_workflow.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build debug apk
         uses: eskatos/gradle-command-action@v1
         with:
-          arguments: clean build
+          arguments: :app:clean :app:build
           distributions-cache-enabled: true
           dependencies-cache-enabled: true
           configuration-cache-enabled: true
