--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,61 @@ subprojects {
     }
 
     project.afterEvaluate {
+        task checkTranslations() {
 
-        task format (type: GoogleJavaFormat) {
+            def php = new File("/usr/bin/php")
+            if (!php.exists()) {
+                project.logger.lifecycle("'${php.absolutePath}' not found. Skipping translation check.")
+                return
+            }
+
+            def resDir = project.file("src/main/res")
+            def strings = new File(resDir, "values/strings.xml")
+            def reportDir = new File(project.rootProject.buildDir, "translation-reports")
+            reportDir.delete()
+
+            if (resDir.exists() && strings.exists()) {
+                def translationDirs = resDir.listFiles((FileFilter) (file -> {
+                    return file.isDirectory() && file.getName().startsWith("values-")
+                }))
+                for (def dir : translationDirs) {
+                    final var translation = new File(dir, "strings.xml")
+                    if (translation.exists()) {
+                        def out = new File(reportDir, "${project.path.replace(':', '/')}/${dir.name}.txt")
+                        if (!out.parentFile.exists()) {
+                            out.parentFile.mkdirs()
+                        }
+
+                        if (out.exists()) {
+                            out.delete()
+                        }
+                        out.createNewFile()
+
+                        def result = exec {
+                            ignoreExitValue true
+                            standardOutput new FileOutputStream(out)
+                            commandLine "${php.absolutePath}",
+                                    "${project.rootProject.file(".tools/strings-check.php")}",
+                                    "${strings.absolutePath}",
+                                    "${translation.absolutePath}"
+                        }
+
+                        if (result.getExitValue() == 0) {
+                            out.delete()
+                        } else {
+                            project.logger.lifecycle("Translation report for '${project.path}/${dir.name}' is written to '${out.absolutePath}'")
+                        }
+
+                    } else {
+                        project.logger.info("No translation file specifed for '${dir.name}'. Skipping..")
+                    }
+                }
+            } else {
+                project.logger.info("Default strings.xml file does not exist for project '${project.name}'")
+            }
+        }
+
+        task format(type: GoogleJavaFormat) {
             source 'src/main'
             source 'src/test'
             include '**/*.java'
@@ -66,59 +119,6 @@ subprojects {
             preBuild.finalizedBy format
         } else {
             println "Task preBuild not found in project ${project.displayName}"
-        }
-    }
-
-    task checkTranslations() {
-
-        def php = new File ("/usr/bin/php")
-        if (!php.exists()) {
-            project.logger.lifecycle("'${php.absolutePath}' not found. Skipping translation check.")
-            return
-        }
-
-        def resDir = project.file("src/main/res")
-        def strings = new File(resDir, "values/strings.xml")
-        def reportDir = new File(project.rootProject.buildDir, "translation-reports")
-        reportDir.delete()
-
-        if (resDir.exists() && strings.exists()) {
-            def translationDirs = resDir.listFiles((FileFilter) (file -> {
-                return file.isDirectory() && file.getName().startsWith("values-") }))
-            for (def dir : translationDirs) {
-                final var translation = new File(dir, "strings.xml")
-                if (translation.exists()) {
-                    def out = new File(reportDir, "${project.path.replace(':', '/')}/${dir.name}.txt")
-                    if (!out.parentFile.exists()) {
-                        out.parentFile.mkdirs()
-                    }
-
-                    if (out.exists()) {
-                        out.delete()
-                    }
-                    out.createNewFile()
-
-                    def result = exec {
-                        ignoreExitValue true
-                        standardOutput new FileOutputStream(out)
-                        commandLine "${php.absolutePath}",
-                                "${project.rootProject.file(".tools/strings-check.php")}",
-                                "${strings.absolutePath}",
-                                "${translation.absolutePath}"
-                    }
-
-                    if (result.getExitValue() == 0) {
-                        out.delete()
-                    } else {
-                        project.logger.lifecycle("Translation report for '${project.path}/${dir.name}' is written to '${out.absolutePath}'")
-                    }
-
-                } else {
-                    project.logger.info("No translation file specifed for '${dir.name}'. Skipping..")
-                }
-            }
-        } else {
-            project.logger.info("Default strings.xml file does not exist for project '${project.name}'")
         }
     }
 }
