--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -34,6 +34,10 @@ ext {
     ]
 
     tests = [
-            junit4: 'junit:junit:4.13'
+            junit: 'junit:junit:4.13.2',
+            google_truth: 'com.google.truth:truth:1.1.3',
+            robolectric: 'org.robolectric:robolectric:4.7.3',
+            androidx_junit: 'androidx.test.ext:junit:1.1.3',
+            androidx_espresso: 'androidx.test.espresso:espresso-core:3.4.0'
     ]
 }
