Fixed NPE in DocumentsProvider; Renamed DocumentsProvider to IDEDocumentsProvider

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
@@ -66,8 +69,8 @@
             android:windowSoftInputMode="adjustResize" />
 
         <provider
-            android:name=".filepicker.DocumentsProvider"
-            android:authorities="com.itsaky.androidide.root"
+            android:name=".filepicker.IDEDocumentsProvider"
+            android:authorities="com.itsaky.androidide.documents"
             android:exported="true"
             android:grantUriPermissions="true"
             android:permission="android.permission.MANAGE_DOCUMENTS">
