--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,59 @@ subprojects {
             }
         }
 
+        tasks.register("checkFormattingChanges", task -> {
+            def exit = rootProject.exec {
+                ignoreExitValue true
+                standardOutput OutputStream.nullOutputStream()
+                errorOutput standardOutput
+                commandLine "git", "diff", "--exit-code"
+            }
+
+            if (exit.exitValue == 0) {
+                println "No changes in ${project.displayName}."
+            } else {
+                task.finalizedBy tasks.stageChanges
+                return
+            }
+        })
+
+        tasks.register("stageChanges", task -> {
+            task.dependsOn tasks.getByName("checkFormattingChanges")
+            def out = new ByteArrayOutputStream()
+            def exit = rootProject.exec {
+                ignoreExitValue true
+                standardOutput out
+                errorOutput standardOutput
+                commandLine "git", "add", "."
+            }
+
+            if (exit.exitValue == 0) {
+                task.finalizedBy tasks.commitFormattingChanges
+                return
+            } else {
+                println "Unable to stage changes. Process terminated with exit code ${exit.exitValue}"
+                println out.toString()
+            }
+        })
+
+        tasks.register("commitFormattingChanges", task -> {
+            task.dependsOn tasks.getByName("stageChanges")
+            def out = new ByteArrayOutputStream()
+            def exit = rootProject.exec {
+                ignoreExitValue true
+                standardOutput out
+                errorOutput standardOutput
+                commandLine "git", "commit", "-m", "[Gradle] Format java source code in project ${project.displayName}"
+            }
+
+            if (exit.exitValue == 0) {
+                println "Changes committed successfully."
+            } else {
+                println "Failed to commit changes. Process terminated with exit code ${exit.exitValue}"
+                println out.toString()
+            }
+        })
+
         task format(type: GoogleJavaFormat) {
             source 'src/main'
             source 'src/test'
@@ -112,6 +165,7 @@ subprojects {
             ignoreFailures false
 
             dependsOn project.tasks.withType(GoogleJavaFormat).iterator().next()
+            finalizedBy tasks.getByName("checkFormattingChanges")
         }
 
         def preBuild = project.tasks.findByName("preBuild")
