--- a/lsp/api/src/main/AndroidManifest.xml
+++ b/lsp/api/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.itsaky.api">
+<manifest package="com.itsaky.api">
 
 </manifest>
