--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,7 @@ dependencies {
     implementation project(':xml-inflater')
     implementation project(':lexers')
     implementation project(':common')
+    implementation project(':actions')
 
     implementation project(':lsp:api')
     implementation project(':lsp:java')
