--- a/lsp/api/build.gradle
+++ b/lsp/api/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation "androidx.core:core-ktx:1.7.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    compileOnly project(':actions')
     compileOnly project(':common')
 }
 
