--- a/lsp/java/build.gradle
+++ b/lsp/java/build.gradle
@@ -43,6 +43,12 @@ android {
             includeAndroidResources = true
         }
     }
+    
+    packagingOptions {
+        resources {
+            excludes += ['README.md', 'SECURITY.md', 'LICENSE.txt']
+        }
+    }
 }
 
 dependencies {
@@ -52,8 +58,7 @@ dependencies {
     implementation androidx.annotation
     implementation google.guava_jre
     implementation google.gson
-
-    implementation "com.github.marschall:zipfilesystem-standalone:1.0.1"
+    
     implementation 'com.google.auto.value:auto-value-annotations:1.9'
     annotationProcessor 'com.google.auto.value:auto-value:1.9'
 
@@ -63,7 +68,8 @@ dependencies {
     compileOnly project(':common')
 
     implementation project(path: ':lsp:api')
-    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'])
+    implementation files ("libs/nb-javac-17.0.0.0-android.jar")
+//    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'])
 
     implementation "androidx.core:core-ktx:1.7.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
