Added 'Generate constructor' java code action

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion rootProject.ext.compileSdk
@@ -33,6 +34,9 @@ dependencies {
     implementation androidx.preference
     implementation androidx.vectors
 	implementation androidx.animated_vectors
+    
+    implementation "androidx.core:core-ktx:1.7.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     
     api androidx.multidex
 }
