--- a/.github/workflows/android_workflow.yml
+++ b/.github/workflows/android_workflow.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build debug apk
         uses: eskatos/gradle-command-action@v1
         with:
-          arguments: :app:clean :app:build test
+          arguments: :app:clean :app:build
           distributions-cache-enabled: true
           dependencies-cache-enabled: true
           configuration-cache-enabled: true
@@ -40,22 +40,12 @@ jobs:
           dependencies-cache-enabled: true
           configuration-cache-enabled: true
 
-      - name: Get branch name and short commit hash
-        id: vars
-        shell: bash
-        run: |
-          echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-
-      - name: Rename APK
-          run: mv app/build/outputs/apk/debug/app-debug.apk ./AndroidIDE-${{ steps.vars.outputs.branch }}-${{ steps.vars.outputs.sha_short }}.apk
-
       - name: Upload APK
         uses: actions/upload-artifact@v2
         if: ${{ !github.head_ref }}
         with:
-          name: AndroidIDE-${{ steps.vars.outputs.branch }}-${{ steps.vars.outputs.sha_short }}.apk
-          path: ./AndroidIDE-${{ steps.vars.outputs.branch }}-${{ steps.vars.outputs.sha_short }}.apk
+          name: apk-debug
+          path: app/build/outputs/apk/debug/app-debug.apk
 
       - name: Upload translation report
         uses: actions/upload-artifact@v2
