Moved 'javac' and 'google-java-format' modules to a common module 'build-tools'

--- a/build-tools/google-java-format/build.gradle
+++ b/build-tools/google-java-format/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     implementation 'com.google.auto.value:auto-value-annotations:1.9'
     annotationProcessor 'com.google.auto.value:auto-value:1.9'
     
-    implementation project (path: ':javac')
+    implementation project (path: ':build-tools:javac')
 }
