--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,5 @@ include ':lsp:testing'
 include ':build-tools'
 include ':build-tools:javac'
 include ':build-tools:google-java-format'
+include ':build-tools:tooling-api'
+include ':build-tools:tooling-api-iml'
