Moved AndroidIDE's logger to its own module

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     
     api androidx.multidex
+    
+    api project (path: ':build-tools:logger')
 }
