--- a/settings.gradle
+++ b/settings.gradle
@@ -16,7 +16,9 @@ include ':lsp:xml'
 include ':lsp:testing'
 
 include ':build-tools'
-include ':build-tools:javac'
+include ':build-tools:framework-stubs'
 include ':build-tools:google-java-format'
+include ':build-tools:javac'
+include ':build-tools:logger'
 include ':build-tools:tooling-api'
 include ':build-tools:tooling-api-iml'
