--- a/settings.gradle
+++ b/settings.gradle
@@ -21,4 +21,4 @@ include ':build-tools:google-java-format'
 include ':build-tools:javac'
 include ':build-tools:logger'
 include ':build-tools:tooling-api'
-include ':build-tools:tooling-api-iml'
+include ':build-tools:tooling-api-impl'
